fix: gallery close button shouldn't get stuck in a stutter on hover from certain mouse positions

--- a/resources/gallery.css
+++ b/resources/gallery.css
@@ -71,14 +71,27 @@
 
 .modal-close-button {
     position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     top: 5vh;
     right: 6vh;
+    width: 8vh;
+    height: 8vh;
     font-size: 12vh;
+    transition: transform .25s linear;
+    transform: rotate(0);
+    border-radius: 50%;
+}
+
+.close-button-text {
+    padding-top: 0.5vh;
+    border-radius: 50%;
     font-weight: lighter;
     color: white;
     text-decoration: none;
-    transition: transform .25s linear;
-    transform: rotate(0);
+    line-height: 0.5;
+    pointer-events: none;
 }
 
 .modal-close-button:hover {
